config/traefik/test-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: web
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: true
spec:
  rules:
  - host: test.rstack.selexin.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
  - host: ipv4.selexin.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
  # tls:
  # - hosts:
  #     - 'test.rstack.selexin.dev'
